--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <article>
             <h1>Quem são?</h1>
             <p>
-                Grupo masculino sul-coreano formado pela empresa Big Hit Music, uma subsidiária da HYBE Corporation, em 2013. Ele é composto por sete membros:<strong> RM, Jin, SUGA, J-Hope, Jimin, V e Jungkook</strong>. O grupo realizou sua estreia oficial em 13 de junho de 2013, com o lançamento do single <abbr title="Não há mais sonhos">"No More Dream"</abbr>, faixa do single álbum <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fproduto.mercadolivre.com.br%2FMLB-3424428693-cd-bts-2-cool-4-skool-_JM&psig=AOvVaw23hkQErm4mxrqYAtO2w4Yg&ust=1724708601711000&source=images&cd=vfe&opi=89978449&ved=0CBMQjhxqFwoTCKjpsbCOkYgDFQAAAAAdAAAAABAE" target="_blank" class="externo">2 Cool 4 Skool</a>.
+                Grupo masculino sul-coreano formado pela empresa Big Hit Music, uma subsidiária da HYBE Corporation, em 2013. Ele é composto por sete membros:<strong> RM, Jin, SUGA, J-Hope, Jimin, V e Jungkook</strong>. O grupo realizou sua estreia oficial em 13 de junho de 2013, com o lançamento do single <abbr title="Não há mais sonhos">"No More Dream"</abbr>, faixa do single álbum <a href="https://thebackstage-deezer.com/br/reviews/albuns-do-bts/" target="_self" class="externo">2 Cool 4 Skool</a>.
             </p>
             <picture>
                 <source media="(max-width:800px )" srcset="imagens/btsprimeiro-pq.jpg">
